feat: add DM Sans font

--- a/package.json
+++ b/package.json
@@ -16,15 +16,21 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@fontsource/dm-mono": "^5.0.17",
+    "@fontsource/dm-sans": "^5.0.17",
     "gatsby": "^5.12.4",
+    "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-image": "^3.12.3",
     "gatsby-plugin-manifest": "^5.12.3",
+    "gatsby-plugin-resolve-src": "^2.1.0",
     "gatsby-plugin-sharp": "^5.12.3",
     "gatsby-plugin-sitemap": "^6.12.3",
     "gatsby-source-filesystem": "^5.12.1",
     "gatsby-transformer-sharp": "^5.12.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.3.3",
