--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "github-pages-build": "gatsby build --prefix-paths"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^2.1.4",
     "gatsby": "^5.12.11",
     "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-image": "^3.12.3",
@@ -26,6 +27,7 @@
     "gatsby-plugin-resolve-src": "^2.1.0",
     "gatsby-plugin-sharp": "^5.12.3",
     "gatsby-plugin-sitemap": "^6.12.3",
+    "gatsby-plugin-styled-components": "^6.12.0",
     "gatsby-source-filesystem": "^5.12.1",
     "gatsby-transformer-sharp": "^5.12.3",
     "gh-pages": "^6.1.0",
