--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-styled-components": "^2.1.4",
     "gatsby": "^5.12.11",
     "gatsby-omni-font-loader": "^2.0.2",
+    "gatsby-plugin-google-gtag": "^5.13.1",
     "gatsby-plugin-image": "^3.12.3",
     "gatsby-plugin-manifest": "^5.12.3",
     "gatsby-plugin-mdx": "^5.12.3",
