--- a/package.json
+++ b/package.json
@@ -18,12 +18,7 @@
     "github-pages-build": "gatsby build"
   },
   "dependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/eslint-parser": "^7.27.5",
-    "@mdx-js/react": "^2.0.0",
     "babel-plugin-styled-components": "^2.1.4",
-    "cookie": "^0.7.0",
-    "eslint": "^7.0.0",
     "gatsby": "^5.12.11",
     "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-google-gtag": "^5.13.1",
@@ -39,10 +34,8 @@
     "gatsby-source-filesystem": "^5.12.1",
     "gatsby-transformer-sharp": "^5.12.3",
     "gh-pages": "^6.1.0",
-    "leaflet": "1.9.3",
-    "multer": "^2.0.0",
-    "path-to-regexp": "^0.1.12",
-    "react": "^18.0.0",
+    "leaflet": "^1.9.4",
+    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-leaflet": "^4.2.1",
@@ -53,8 +46,6 @@
     "@types/node": "^20.3.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "@typescript-eslint/eslint-plugin": "^4.0.0",
-    "@typescript-eslint/parser": "^4.0.0",
     "typescript": "^5.1.6"
   }
 }
